--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Repository Proxy</title>
+    <title>Nexus Repository Proxy</title>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             if (window.location.pathname !== "/") {
@@ -14,7 +14,7 @@
 </head>
 <body>
     <pre>
-Repository Proxy - repo.lemonypancakes.me
+Nexus Repository Proxy - repo.lemonypancakes.me
 
 Use this URL for accessing hosted artifacts:
 https://repo.lemonypancakes.me/
