--- a/index.html
+++ b/index.html
@@ -3,18 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexus Repository Proxy</title>
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            if (window.location.pathname !== "/") {
-                window.location.href = "https://repo.codemc.io/repository/lemonypancakes" + window.location.pathname;
-            }
-        });
-    </script>
+    <title>Nexus Repository Redirect</title>
 </head>
 <body>
     <pre>
-Nexus Repository Proxy - repo.lemonypancakes.me
+Nexus Repository Redirect - repo.lemonypancakes.me
 
 Use this URL for accessing hosted artifacts:
 https://repo.lemonypancakes.me/
